--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-$ cat .gitignore
+﻿$ cat .gitignore
 
 # Ignorar arquivos específicos
 .DS_Store
@@ -10,3 +10,4 @@ $ cat .gitignore
 # Ignorar todos os diretórios e arquivos em um diretório.
 tmp/**/* 
 lib/*
+test/**
