correcoes e criacao de beans e dao

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,12 +24,18 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/comunicadorweb.jar
+dist.jar=${dist.dir}/ecommerce.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.connector-api-1.5.jar=lib\\connector-api-1.5.jar
+file.reference.jaybird-2.2.4.jar=lib\\jaybird-2.2.4.jar
+file.reference.jaybird-full-2.2.4.jar=lib\\jaybird-full-2.2.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.connector-api-1.5.jar}:\
+    ${file.reference.jaybird-2.2.4.jar}:\
+    ${file.reference.jaybird-full-2.2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=br.com.atsinformatica.App
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
