correcoes e criacao de beans e dao

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,34 @@ dist.jar=${dist.dir}/ecommerce.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.connector-api-1.5.jar=lib\\connector-api-1.5.jar
+file.reference.javassist-3.8.0.GA.jar=lib\\javassist-3.8.0.GA.jar
+file.reference.jaxrs-api-3.0.6.Final.jar=lib\\jaxrs-api-3.0.6.Final.jar
 file.reference.jaybird-2.2.4.jar=lib\\jaybird-2.2.4.jar
 file.reference.jaybird-full-2.2.4.jar=lib\\jaybird-full-2.2.4.jar
+file.reference.jersey-client-1.17.1-sources.jar=lib\\jersey-client-1.17.1-sources.jar
+file.reference.jersey-client-1.17.1.jar=lib\\jersey-client-1.17.1.jar
+file.reference.jersey-core-1.17.1.jar=lib\\jersey-core-1.17.1.jar
+file.reference.jersey-grizzly-1.17.1.jar=lib\\jersey-grizzly-1.17.1.jar
+file.reference.jersey-server-1.17.1.jar=lib\\jersey-server-1.17.1.jar
+file.reference.jersey-servlet-1.17.1.jar=lib\\jersey-servlet-1.17.1.jar
+file.reference.resteasy-jsapi-3.0.6.Final.jar=lib\\resteasy-jsapi-3.0.6.Final.jar
+file.reference.scannotation-1.0.3.jar=lib\\scannotation-1.0.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.connector-api-1.5.jar}:\
     ${file.reference.jaybird-2.2.4.jar}:\
-    ${file.reference.jaybird-full-2.2.4.jar}
+    ${file.reference.jaybird-full-2.2.4.jar}:\
+    ${file.reference.javassist-3.8.0.GA.jar}:\
+    ${file.reference.jaxrs-api-3.0.6.Final.jar}:\
+    ${file.reference.resteasy-jsapi-3.0.6.Final.jar}:\
+    ${file.reference.scannotation-1.0.3.jar}:\
+    ${file.reference.jersey-client-1.17.1-sources.jar}:\
+    ${file.reference.jersey-client-1.17.1.jar}:\
+    ${file.reference.jersey-core-1.17.1.jar}:\
+    ${file.reference.jersey-grizzly-1.17.1.jar}:\
+    ${file.reference.jersey-server-1.17.1.jar}:\
+    ${file.reference.jersey-servlet-1.17.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
