--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,6 +49,7 @@ file.reference.jackson-databind-2.2.3.jar=lib/jackson-databind-2.2.3.jar
 file.reference.jackson-jaxrs-base-2.2.3.jar=lib/jackson-jaxrs-base-2.2.3.jar
 file.reference.jackson-jaxrs-json-provider-2.2.3.jar=lib/jackson-jaxrs-json-provider-2.2.3.jar
 file.reference.jackson-module-jaxb-annotations-2.2.3.jar=lib/jackson-module-jaxb-annotations-2.2.3.jar
+file.reference.jasypt-1.7.1.jar=lib/jasypt-1.7.1.jar
 file.reference.javassist-3.8.0.GA.jar=lib/javassist-3.8.0.GA.jar
 file.reference.javax.persistence-2.1.0.jar=lib/javax.persistence-2.1.0.jar
 file.reference.javax.servlet-api-3.0.1.jar=lib/javax.servlet-api-3.0.1.jar
@@ -139,7 +140,8 @@ javac.classpath=\
     ${file.reference.JTattoo-1.6.9.jar}:\
     ${file.reference.TimerBean.jar}:\
     ${file.reference.swingx-1.0.jar}:\
-    ${file.reference.towel-v1.2.2.jar}
+    ${file.reference.towel-v1.2.2.jar}:\
+    ${file.reference.jasypt-1.7.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
