--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -244,7 +244,8 @@ javac.classpath=\
     ${file.reference.servlet-api-2.5.jar}:\
     ${file.reference.swingx-1.0.jar}:\
     ${file.reference.towel-v1.2.2.jar}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.jasypt-1.7.1.jar}
     ${file.reference.jasypt-1.7.1.jar}
 =======
     ${file.reference.wagon-provider-api-1.0-beta-2.jar}
