--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@
 *~
 *.class
 *.jar
+*.properties
 # Ignorar todos os diretórios e arquivos em um diretório.
 tmp/**/* 
 lib/*
 test/**/*
 /target/
 /build/
+/nbproject/**/*
